2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	python: run the 'py-compile' script with $(SHELL)
	* lib/python.am (install-%DIR%PYTHON): Run each instance of
	py-compile using $(SHELL).  Since we are at it, break overly
	long lines.
	(am__py_compile): New variable, to reduce code duplication.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: fix some failures, extend some checks
	* Makefile.am (sc_diff_automake_in_automake): Update, as we
	now expect 9 lines, not 8, to be changed from `automake.in'
	to `automake'.
	(sc_diff_aclocal_in_aclocal): New maintainer check, similar to
	the above, and checking that only 10 lines are changed from
	`aclocal.in' to `aclocal'.
	(syntax_check_rules): Update.
	(sc_tests_Exit_not_exit): Exempt self tests `self-check-*.test'
	from this check, as they can legitimately use the bare `exit'
	builtin in various places.
	* doc/automake.texi (Python): Remove stray `@' from the end of
	a line.  Typo introduced in commit `v1.11-312-g5bf7af6'.
	* tests/depcomp8a.test: Pass DISTCHECK_CONFIGURE_FLAGS to make
	from the environment rather than from the command line, to
	pacify the `sc_tests_overriding_macros_on_cmdline' maintainer
	check.
	* tests/depcomp8b.test: Likewise.

2011-05-29  Stefano Lattarini  <stefano.lattarini@gmail.com>

	remake: behave better with non-GNU make in subdirectories
	Currently, with every decent make program, it is possible to
	rebuild out-of-date autotools-generated files with a simple
	"make Makefile" -- but for this to work reliably with non-GNU
	make implementations, the command must be issued from the
	top-level directory.  This patch removes such limitation.
	* lib/am/configure.am (am--refresh): Depend on `%MAKEFILE%'.
	* tests/defs.in (using_gmake): New function, backported from the
	`master' branch (and simplified).
	* tests/remake-subdir.test: New test.
	* tests/remake-subdir2.test: Likewise.
	* tests/remake-subdir-gnu.test: Likewise.