@@ -53,12 +53,8 @@ if %?BASE%
 ## Byte-compile must be done at install time, since file times are
 ## encoded in the actual files.
 	if test -n "$$dlist"; then \
-	  if test -z "$(DESTDIR)"; then \
-	    $(am__py_compile) --basedir "$(%NDIR%dir)" $$dlist; \
-	  else \
-	    $(am__py_compile) --destdir "$(DESTDIR)" \
-	                      --basedir "$(%NDIR%dir)" $$dlist; \
-	  fi; \
+	  $(am__py_compile) --destdir "$(DESTDIR)" \
+	                    --basedir "$(%NDIR%dir)" $$dlist; \
 	else :; fi
 else !%?BASE%
 	@list='$(%DIR%_PYTHON)'; test -n "$(%NDIR%dir)" || list=; \
@@ -78,12 +74,8 @@ else !%?BASE%
 ## Byte-compile must be done at install time, since file times are
 ## encoded in the actual files.
 	  if test -n "$$dlist"; then \
-	    if test -z "$(DESTDIR)"; then \
-	      $(am__py_compile) --basedir "$(%NDIR%dir)" $$dlist; \
-	    else \
-	      $(am__py_compile) --destdir "$(DESTDIR)" \
-	                        --basedir "$(%NDIR%dir)" $$dlist; \
-	    fi; \
+	    $(am__py_compile) --destdir "$(DESTDIR)" \
+	                      --basedir "$(%NDIR%dir)" $$dlist; \
 	  else :; fi \
 	done
 endif !%?BASE%
