@@ -5,6 +5,9 @@ New in 1.11.0a:
   - The `lzma' compression scheme and associated automake option `dist-lzma'
     is obsoleted by `xz' and `dist-xz' due to upstream changes.
 
+  - The py-compile script now accepts empty arguments passed to the options
+    `--destdir' and `--basedir'.
+
 Bugs fixed in 1.11.0a:
 
 * Bugs introduced by 1.11:
