@@ -1,5 +1,15 @@
 2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	py-compile: the '--destdir' option now accepts a blank argument
+	* lib/py-compile (Option parsing): Do not count an empty argument
+	to `--destdir' or `--basedir' as a missing argument.
+	* lib/python.am: Simplify accordingly, passing the `--destdir'
+	option to py-compile unconditionally, even if `$(DESTDIR)' is
+	empty.
+	* NEWS: Update.
+
+2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	python: run the 'py-compile' script with $(SHELL)
 	* lib/python.am (install-%DIR%PYTHON): Run each instance of
 	py-compile using $(SHELL).  Since we are at it, break overly
